# liblicense

./: .git-svn-fix.sh  .gitignore  .gitmodules  .indent.pro  AUTHORS  ChangeLog  FIXME  Makefile  Makefile.am  PRESS  PRESS.asheesh  README  TODO  acinclude.m4  autogen.sh  configure.ac  doxygen-doc.cfg  doxygen-doc.sh  gen_licenses.py  i18n  liblicense-0.4-gmsgfmt.patch  liblicense.h  liblicense.pc.in  liblicense.spec  licenses  list.c  list.h  module_wrangler.c  module_wrangler.h  read_license.c  read_license.h  system_default.c  system_default.h  system_licenses.c  system_licenses.h  write_license.c  write_license.h
bindings/: Makefile.am
bindings/python/: Makefile.am  __init__.py  liblicense.c  setup.py
bindings/python/tests/: test.py
bindings/ruby/: Makefile.am  extconf.rb  liblicense.c  license.h  test.rb
bindings/ruby/lib/: liblicense.rb
dynamic_tests/: Makefile.am  chooser_test.c  data_empty.flac  default_test.c  info_test.c  license_test  list_test.c  module_selection_test.c  modules_test.py  mw_test.c  predicate_rw_test.c  predicate_test.c  read_test.c  test.c  test.h  write_test.c
icons/: Makefile.am
liblicense/: Makefile.am  liblicense.h  license_chooser.c  license_get_creator.c  license_get_publisher.c  license_info.c  license_print_info.c  licenses_cached.c  licenses_uncached.c  list.c  module_wrangler.c  modules.h  read_license.c  system_default.c  write_license.c
licenses/: Makefile.am  creativecommons.org_licenses_GPL_2.0_.rdf  creativecommons.org_licenses_LGPL_2.1_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_at_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_be_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_cl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_de_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_fr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_it_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_kr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_nl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_pl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_tw_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_uk_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_za_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ar_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_bg_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ch_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_cn_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_co_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_dk_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_hu_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_il_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_in_.rdf  (+339 more)
modules/: Makefile.am
modules/config/: Makefile.am  flat_file.c
modules/io/: Makefile  Makefile.am  exempi.c  flac.c  gsf.c  id3.c  raptor.c  registry  shared_xmp.c  shared_xmp.h  sidecar_xmp.c  stub.c  taglib.cpp  vcedit.c  vorbis.c
po/: LINGUAS  Makefile.in  af.po  bg.po  ca.po  da.po  de_CH.po  en_GB.po  en_US.po  eo.po  es_AR.po  es_CL.po  es_PE.po  eu.po  extract-messages.sh  fi.po  fr.po  fr_CA.po  gen_messages.sh  gen_po.py  gl.po  he.po  hr.po  hu.po  it.po  ja.po  kr.po  liblicense.pot  mk.po  ms.po  nl.po  nso.po  pl.po  pt.po  pt_PT.po  sl.po  st.po  sv.po  zh.po  zh_TW.po  (+1 more)
src/: Makefile.am
src/gnome/: Makefile.am  default-content-license.in  default.py  gui_gtk.py.in  nautilus-liblicense.py  widgets.py
src/kde/: Makefile.am  acinclude.m4  configure.ac  license_chooser.ui
src/kde/kcm-license/: CMakeLists.txt  Makefile.am  kcm_liblicense.cpp  kcm_liblicense.h  license_chooser.cpp  license_chooser.h
src/kde/kde-licenseprops/: CMakeLists.txt  Makefile.am  license_chooser.cpp  license_chooser.h  licenseprops.cpp  licenseprops.h
tests/: FIXME  Makefile.am  chooser_test.c  data_empty.flac  default_test.c  info_test.c  list_test.c  module_selection_test.c  mw_test.c  predicate_rw_test.c  predicate_test.c  read_test.c  test.c  write_test.c
utils/: Makefile.am  license.c
xdgmime/: xdgmimecache.c  xdgmimeint.c  xdgmimemagic.c
