# Creative Commons has made the contents of this file
# available under a CC-GNU-LGPL license:
#
# http://creativecommons.org/licenses/LGPL/2.1/
#
# A copy of the full license can be found as part of this
# distribution in the file COPYING.
# 
# You may use the liblicense software in accordance with the
# terms of that license. You agree that you are solely 
# responsible for your use of the liblicense software and you
# represent and warrant to Creative Commons that your use
# of the liblicense software will comply with the CC-GNU-LGPL.
#
# Copyright 2007, Creative Commons, www.creativecommons.org.
# Copyright 2007, Scott Shawcroft.

iconsdir = $(pkgdatadir)/icons
icons_DATA = ar.svg \
             ash.svg \
             by.svg \
             pcw.svg \
             sa.svg \
             scales.svg \
             jurisdictions/unported.png \
             jurisdictions/ar.png \
             jurisdictions/at.png \
             jurisdictions/au.png \
             jurisdictions/be.png \
             jurisdictions/bg.png \
             jurisdictions/br.png \
             jurisdictions/ca.png \
             jurisdictions/ch.png \
             jurisdictions/cl.png \
             jurisdictions/cn.png \
             jurisdictions/co.png \
             jurisdictions/de.png \
             jurisdictions/dk.png \
             jurisdictions/es.png \
             jurisdictions/fi.png \
             jurisdictions/fr.png \
             jurisdictions/hr.png \
             jurisdictions/hu.png \
             jurisdictions/il.png \
             jurisdictions/in.png \
             jurisdictions/it.png \
             jurisdictions/jp.png \
             jurisdictions/kr.png \
             jurisdictions/mk.png \
             jurisdictions/mt.png \
             jurisdictions/mx.png \
             jurisdictions/my.png \
             jurisdictions/nl.png \
             jurisdictions/pe.png \
             jurisdictions/pl.png \
             jurisdictions/pt.png \
             jurisdictions/scotland.png \
             jurisdictions/se.png \
             jurisdictions/si.png \
             jurisdictions/tw.png \
             jurisdictions/uk.png \
             jurisdictions/us.png \
             jurisdictions/za.png

logodir = $(datadir)/pixmaps
logo_DATA = scales.svg

EXTRA_DIST = $(icons_DATA)
